[gd_scene load_steps=11 format=3 uid="uid://c83ixfa2wc6c8"]

[ext_resource type="Script" path="res://scenes/above_lake.gd" id="1_87a6g"]
[ext_resource type="PackedScene" uid="uid://8v3obom8if5a" path="res://scenes/rain.tscn" id="1_tovx6"]
[ext_resource type="PackedScene" uid="uid://btcpjdktuymx" path="res://scenes/tile_map.tscn" id="1_ydspu"]
[ext_resource type="PackedScene" uid="uid://bhysbh3p85m13" path="res://scenes/christina.tscn" id="2_mk5oy"]
[ext_resource type="PackedScene" uid="uid://vcypnq8pc4sq" path="res://scenes/sunset.tscn" id="4_hybch"]
[ext_resource type="Script" path="res://addons/camera_2d_plus/objects/camera_2d_plus/camera_2d_plus_script.gd" id="5_7lwod"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_48i1y"]
size = Vector2(77, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xh7dl"]
size = Vector2(66, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_smxp0"]
size = Vector2(96, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x8otv"]
size = Vector2(96, 11)

[node name="above_lake" type="Node2D"]
script = ExtResource("1_87a6g")

[node name="rain" parent="." instance=ExtResource("1_tovx6")]
z_index = 5
position = Vector2(1362, 282)

[node name="GPUParticles2D" parent="rain" index="1"]
position = Vector2(-366, -20)
amount = 400
lifetime = 8.0
visibility_rect = Rect2(-100, -100, 700, 700)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -5

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="TileMap" parent="." instance=ExtResource("1_ydspu")]
layer_0/tile_data = PackedInt32Array(2949177, 131090, 3, 2883641, 131090, 3, 2818105, 131090, 3, 2752569, 131090, 3, 2687033, 131090, 3, 2621497, 131090, 3, 2555961, 131090, 3, 2490425, 131090, 3, 2949188, 18, 3, 2883652, 18, 3, 2818116, 18, 3, 2752580, 18, 3, 2687044, 18, 3, 2621508, 18, 3, 2555972, 18, 3, 2490436, 18, 3, 2424889, 131090, 3, 2424900, 18, 3, 2359353, 65554, 6, 2359364, 18, 6, 2359354, 131090, 4, 2359363, 18, 4, 2293827, 18, 3, 2293818, 131090, 3, 2228282, 65554, 6, 2228291, 18, 6, 2228290, 18, 4, 2228283, 131090, 4, 2162747, 65554, 6, 2162754, 18, 6, 2162748, 65554, 4, 2162749, 65554, 4, 2162750, 65554, 4, 2162751, 65554, 4, 2162752, 65554, 4, 2162753, 65554, 4, 2949178, 20, 3, 2883642, 20, 3, 2818106, 20, 3, 2752570, 20, 3, 2687034, 20, 3, 2621498, 20, 3, 2555962, 20, 3, 2490426, 20, 3, 2424890, 20, 2, 2424891, 20, 5, 2359355, 20, 3, 2293819, 20, 2, 2293820, 20, 5, 2228284, 20, 2, 2228285, 65556, 2, 2228286, 65556, 2, 2228287, 65556, 2, 2228288, 65556, 2, 2228289, 131092, 2, 2293825, 65556, 5, 2293826, 131092, 2, 2359362, 131092, 3, 2424898, 65556, 5, 2424899, 131092, 2, 2490435, 131092, 3, 2555971, 131092, 3, 2621507, 131092, 3, 2687043, 131092, 3, 2752579, 131092, 3, 2818115, 131092, 3, 2883651, 131092, 3, 2949187, 131092, 3, 2949176, 32, 1, 2883640, 32, 1, 2818104, 32, 1, 2752568, 32, 1, 2687032, 32, 1, 2621496, 32, 1, 2555960, 32, 1, 2490424, 32, 1, 2424888, 32, 1, 2359352, 32, 1, 2293816, 32, 0, 2293817, 32, 6, 2228281, 32, 1, 2162745, 32, 0, 2162746, 32, 6, 2097210, 32, 0, 2097211, 65568, 0, 2097212, 65568, 0, 2097213, 65568, 0, 2097214, 65568, 0, 2097215, 65568, 0, 2097216, 65568, 0, 2097217, 65568, 0, 2097218, 65568, 0, 2097219, 131104, 0, 2162755, 65568, 6, 2162756, 131104, 0, 2228292, 131104, 1, 2293828, 65568, 6, 2293829, 131104, 0, 2359365, 131104, 1, 2424901, 131104, 1, 2490437, 131104, 1, 2555973, 131104, 1, 2621509, 131104, 1, 2687045, 131104, 1, 2752581, 131104, 1, 2818117, 131104, 1, 2883653, 131104, 1, 2949189, 131104, 1, 2031677, 393248, 7, 2031678, 393248, 7, 2031679, 393248, 7)
layer_1/tile_data = PackedInt32Array(2031676, 65539, 1, 2031675, 65539, 1, 2031674, 65539, 1, 2031680, 65539, 1, 2031681, 65539, 1, 2031682, 65539, 1, 2031683, 65539, 1, 2097209, 65539, 1, 2228280, 65539, 1, 2228293, 65539, 1, 2097220, 65539, 1, 2162744, 3, 0, 2031673, 3, 0, 1966138, 3, 0, 1966139, 3, 0, 1966140, 3, 0, 1966144, 3, 0, 1966145, 3, 0, 1966146, 3, 0, 1966147, 3, 0, 2031684, 3, 0, 2162757, 3, 0)
layer_2/z_index = 2
layer_2/tile_data = PackedInt32Array(2949176, 458755, 1, 2883640, 458755, 1, 2818104, 458755, 1, 2752568, 458755, 1, 2687032, 458755, 1, 2621496, 458755, 1, 2555960, 458755, 1, 2490424, 458755, 1, 2424888, 458755, 1, 2359352, 458755, 1, 2293816, 458755, 1, 2228280, 458755, 1, 2162744, 393219, 4, 2162745, 458755, 2, 2097209, 458755, 1, 2031673, 393219, 4, 2031674, 458755, 2, 1966138, 393219, 4, 1966139, 393219, 2, 1966140, 393219, 2, 1966141, 393219, 2, 1966142, 393219, 2, 1966143, 393219, 2, 1966144, 393219, 2, 1966145, 393219, 2, 1966146, 393219, 2, 1966147, 327683, 4, 2031683, 327683, 2, 2031684, 327683, 4, 2097220, 327683, 1, 2162756, 327683, 2, 2162757, 327683, 4, 2228293, 327683, 1, 2293829, 327683, 1, 2359365, 327683, 1, 2424901, 327683, 1, 2490437, 327683, 1, 2555973, 327683, 1, 2621509, 327683, 1, 2687045, 327683, 1, 2752581, 327683, 1, 2818117, 327683, 1, 2883653, 327683, 1, 2949189, 327683, 1, 2097208, 393219, 1, 2031672, 393219, 1, 1966136, 393219, 1, 1966137, 393219, 1, 1966148, 393219, 1, 1966149, 393219, 1, 2031685, 393219, 1, 2097221, 393219, 1)
layer_5/tile_data = PackedInt32Array(2490426, 19, 0, 2490427, 19, 0, 2490428, 19, 0, 2490429, 19, 0, 2490430, 19, 0, 2490431, 19, 0, 2490432, 19, 0, 2490433, 19, 0, 2490434, 19, 0, 2490435, 19, 0, 2555962, 19, 0, 2621498, 19, 0, 2687034, 19, 0, 2752570, 19, 0, 2818106, 19, 0, 2883642, 19, 0, 2949178, 19, 0, 2949179, 19, 0, 2949180, 19, 0, 2949181, 19, 0, 2949182, 19, 0, 2949183, 19, 0, 2883648, 19, 0, 2883649, 19, 0, 2883650, 19, 0, 2949186, 19, 0, 2949187, 19, 0, 2949185, 19, 0, 2949184, 19, 0, 2883651, 19, 0, 2818115, 19, 0, 2752579, 19, 0, 2687043, 19, 0, 2621507, 19, 0, 2555971, 19, 0, 2818108, 19, 0, 2752572, 19, 0, 2687036, 19, 0, 2621500, 19, 0, 2555964, 19, 0, 2555963, 19, 0, 2621499, 19, 0, 2687035, 19, 0, 2752571, 19, 0, 2818107, 19, 0, 2883643, 19, 0, 2883644, 19, 0, 2883645, 19, 0, 2818109, 19, 0, 2752573, 19, 0, 2687037, 19, 0, 2621501, 19, 0, 2555965, 19, 0, 2555966, 19, 0, 2621502, 19, 0, 2687038, 19, 0, 2752574, 19, 0, 2818110, 19, 0, 2883646, 19, 0, 2883647, 19, 0, 2818111, 19, 0, 2752575, 19, 0, 2687039, 19, 0, 2621503, 19, 0, 2555967, 19, 0, 2555968, 19, 0, 2621504, 19, 0, 2687040, 19, 0, 2752576, 19, 0, 2818112, 19, 0, 2818113, 19, 0, 2752577, 19, 0, 2687041, 19, 0, 2621505, 19, 0, 2555969, 19, 0, 2555970, 19, 0, 2621506, 19, 0, 2687042, 19, 0, 2752578, 19, 0, 2818114, 19, 0, 2424890, 19, 0, 2424891, 19, 0, 2424892, 19, 0, 2424893, 19, 0, 2424894, 19, 0, 2424895, 19, 0, 2424896, 19, 0, 2424897, 19, 0, 2424898, 19, 0, 2424899, 19, 0, 2359355, 19, 0, 2359356, 19, 0, 2359357, 19, 0, 2359358, 19, 0, 2359359, 19, 0, 2359360, 19, 0, 2359361, 19, 0, 2359362, 19, 0, 2293819, 19, 0, 2293820, 19, 0, 2293821, 19, 0, 2293822, 19, 0, 2293823, 19, 0, 2293824, 19, 0, 2293825, 19, 0, 2293826, 19, 0, 2228284, 19, 0, 2228285, 19, 0, 2228286, 19, 0, 2228287, 19, 0, 2228288, 19, 0, 2228289, 19, 0)
layer_6/name = "shadow"
layer_6/z_index = 1
layer_6/tile_data = PackedInt32Array(2097210, 393241, 4, 2097211, 393241, 2, 2097212, 393241, 2, 2097213, 393241, 2, 2097214, 393241, 2, 2097215, 393241, 2, 2097216, 393241, 2, 2097217, 393241, 2, 2097218, 393241, 2, 2097219, 327705, 4, 2031674, 393241, 1, 2031675, 393241, 1, 2031676, 393241, 1, 2031677, 393241, 1, 2031678, 393241, 1, 2031679, 393241, 1, 2031680, 393241, 1, 2031681, 393241, 1, 2031682, 393241, 1, 2031683, 393241, 1, 1966147, 393241, 1, 1966146, 393241, 1, 1966145, 393241, 1, 1966144, 393241, 1, 1966143, 393241, 1, 1966142, 393241, 1, 1966141, 393241, 1, 1966140, 393241, 1, 1966139, 393241, 1, 1966138, 393241, 1, 2162746, 458777, 2, 2162745, 393241, 4, 2228281, 458777, 1, 2293817, 458777, 2, 2293816, 393241, 4, 2162755, 327705, 2, 2162756, 327705, 4, 2228292, 327705, 1, 2293828, 327705, 2, 2293829, 327705, 4, 2097220, 393241, 1, 2031684, 393241, 1, 2228293, 393241, 1, 2162757, 393241, 1, 2097209, 393241, 1, 2031673, 393241, 1, 2228280, 393241, 1, 2162744, 393241, 1)
layer_7/name = "rain_splash"
layer_7/tile_data = PackedInt32Array(2949177, 30, 0, 2818105, 30, 0, 2621497, 30, 0, 2555961, 30, 0, 2490425, 30, 0, 2228283, 30, 0, 2162749, 30, 0, 2293827, 30, 0, 2359364, 30, 0, 2752580, 30, 0, 2621508, 30, 0, 2228290, 30, 0, 2162752, 30, 0)

[node name="Christina" parent="." instance=ExtResource("2_mk5oy")]
position = Vector2(1159, 781)

[node name="Camera2D" type="Camera2D" parent="Christina"]
zoom = Vector2(6, 6)
limit_left = 761
limit_top = 284
limit_right = 1209
limit_bottom = 796
drag_horizontal_enabled = true
drag_vertical_enabled = true
script = ExtResource("5_7lwod")
HORIZONTAL_CUT_SIZE = 150
CINEMATIC_LAYER = 0

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(987, 284)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(838, 796, 838, 511, 870, 511, 870, 447, 902, 447, 902, 422, 1068, 423, 1068, 447, 1099, 447, 1099, 512, 1131, 512, 1131, 796)

[node name="sunset" parent="." instance=ExtResource("4_hybch")]
visible = false

[node name="lake_transit_left" type="Area2D" parent="."]
position = Vector2(771, 806)

[node name="CollisionShape2D" type="CollisionShape2D" parent="lake_transit_left"]
position = Vector2(28.5, 0)
shape = SubResource("RectangleShape2D_48i1y")

[node name="lake_transit_right" type="Area2D" parent="."]
position = Vector2(1139, 806)

[node name="CollisionShape2D" type="CollisionShape2D" parent="lake_transit_right"]
position = Vector2(23, 0)
shape = SubResource("RectangleShape2D_xh7dl")

[node name="night_forest_transit" type="Area2D" parent="."]
position = Vector2(931, 325)

[node name="CollisionShape2D" type="CollisionShape2D" parent="night_forest_transit"]
position = Vector2(38, 0)
shape = SubResource("RectangleShape2D_smxp0")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(931, 347)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(38, -4.5)
shape = SubResource("RectangleShape2D_x8otv")

[connection signal="body_entered" from="lake_transit_left" to="." method="_on_lake_transit_left_body_entered"]
[connection signal="body_exited" from="lake_transit_left" to="." method="_on_lake_transit_left_body_exited"]
[connection signal="body_entered" from="lake_transit_right" to="." method="_on_lake_transit_right_body_entered"]
[connection signal="body_exited" from="lake_transit_right" to="." method="_on_lake_transit_right_body_exited"]
[connection signal="body_entered" from="night_forest_transit" to="." method="_on_night_forest_transit_body_entered"]
[connection signal="body_exited" from="night_forest_transit" to="." method="_on_night_forest_transit_body_exited"]

[editable path="rain"]
